test/e2e/testdata/accesslog-file.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: accesslog-file
  namespace: gateway-conformance-infra
  annotations:
    gateway.envoyproxy.io/test-annotation: test-annotation-value
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /file
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: tlsroute-acccesslog
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
      sectionName: tls
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: tls-backend-2
          port: 443
